cf_analysis_results/checkerframework_results/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8.txt
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/serialization/SBufferedImage.java:39: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-4 $$ javax.imageio.stream.ImageOutputStream $$ regular method exit $$ ( 1112, 1148 ) $$ @MustCall method close may not have been invoked on temp-var-4 or any of its aliases.
	        writer.setOutput(ImageIO.createImageOutputStream(out));
	                                                        ^
  The type of object is: javax.imageio.stream.ImageOutputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/serialization/SBufferedImage.java:48: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-12 $$ javax.imageio.stream.ImageInputStream $$ possible exceptional exit due to ImageIO.read(ImageIO.createImageInputStream(in)) with exception type java.io.IOException $$ ( 1556, 1590 ) $$ @MustCall method close may not have been invoked on temp-var-12 or any of its aliases.
    image=ImageIO.read(ImageIO.createImageInputStream(in));
                                                     ^
  The type of object is: javax.imageio.stream.ImageInputStream.
  Reason for going out of scope: possible exceptional exit due to ImageIO.read(ImageIO.createImageInputStream(in)) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/attribute/AttributeUnitTypes.java:26: error: (return) $$ 2 $$ capture#867 extends @MustCallUnknown Unit $$ @MustCall Unit $$ ( 706, 760 ) $$ incompatible types in return.
        return super.getData().get(unitName).getClass().newInstance();
                                                                   ^
  type of expression: capture#867 extends @MustCallUnknown Unit
  method return type: @MustCall Unit
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/input/TBInputEngine.java:103: error: (required.method.not.called) $$ 4 $$ method close $$ fstream $$ java.io.FileInputStream $$ possible exceptional exit due to br.readLine() with exception type java.io.IOException $$ ( 2593, 2645 ) $$ @MustCall method close may not have been invoked on fstream or any of its aliases.
			FileInputStream fstream = new FileInputStream(file);
			                ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to br.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/input/TBInputEngine.java:142: error: (required.method.not.called) $$ 4 $$ method close $$ fstream $$ java.io.FileWriter $$ possible exceptional exit due to out.write(event.toString() + "\n") with exception type java.io.IOException $$ ( 4014, 4056 ) $$ @MustCall method close may not have been invoked on fstream or any of its aliases.
			FileWriter fstream = new FileWriter(file);
			           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to out.write(event.toString() + "\n") with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandSave.java:68: error: (required.method.not.called) $$ 4 $$ method close $$ fileOut $$ java.io.FileOutputStream $$ possible exceptional exit due to new ObjectOutputStream(fileOut) with exception type java.io.IOException $$ ( 1559, 1622 ) $$ @MustCall method close may not have been invoked on fileOut or any of its aliases.
			FileOutputStream fileOut =
			                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectOutputStream(fileOut) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandSave.java:70: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.ObjectOutputStream $$ possible exceptional exit due to out.writeObject(map) with exception type java.io.IOException $$ ( 1626, 1688 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
			ObjectOutputStream out =
			                   ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to out.writeObject(map) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandSave.java:96: error: (required.method.not.called) $$ 4 $$ method close $$ fileOut $$ java.io.FileOutputStream $$ possible exceptional exit due to new ObjectOutputStream(fileOut) with exception type java.io.IOException $$ ( 2155, 2218 ) $$ @MustCall method close may not have been invoked on fileOut or any of its aliases.
			FileOutputStream fileOut =
			                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectOutputStream(fileOut) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandSave.java:98: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.ObjectOutputStream $$ possible exceptional exit due to out.writeObject(game) with exception type java.io.IOException $$ ( 2222, 2284 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
			ObjectOutputStream out =
			                   ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to out.writeObject(game) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandLoad.java:83: error: (required.method.not.called) $$ 4 $$ method close $$ fileIn $$ java.io.FileInputStream $$ possible exceptional exit due to new ObjectInputStream(fileIn) with exception type java.io.IOException $$ ( 1730, 1788 ) $$ @MustCall method close may not have been invoked on fileIn or any of its aliases.
				FileInputStream fileIn =
				                ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(fileIn) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandLoad.java:85: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.ObjectInputStream $$ regular method exit $$ ( 1793, 1846 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
				ObjectInputStream in = new ObjectInputStream(fileIn);
				                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandLoad.java:105: error: (required.method.not.called) $$ 4 $$ method close $$ fileIn $$ java.io.FileInputStream $$ possible exceptional exit due to new ObjectInputStream(fileIn) with exception type java.io.IOException $$ ( 2154, 2212 ) $$ @MustCall method close may not have been invoked on fileIn or any of its aliases.
				FileInputStream fileIn =
				                ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(fileIn) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/editmode/CommandLoad.java:107: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.ObjectInputStream $$ regular method exit $$ ( 2217, 2270 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
				ObjectInputStream in = new ObjectInputStream(fileIn);
				                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: regular method exit
Note: ../../../../datasets/june2020_dataset/url28dfd00382_byang223_TurnBAPI_tgz-pJ8-units_upgrades_UpgradeTestJ8/src/GUI/EditModeGUI.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
13 errors
